# faster

reader/: CMakeLists.txt  README  reader.cpp
reader/cmake_modules/: ROOTConfig.cmake
